tests/machine/x/ocaml/string_contains.ml
let s = "catch"

let () =
  print_endline s.contains "cat"
  print_endline s.contains "dog"
